test/dryrun/no_name/compliant_related_obj/desired_status.yaml
relatedObjects:
  - object:
      kind: Ingress
      metadata:
        name: good-ingress
    reason: Resource found as expected
compliant: Compliant
